metadata-classic/objects/dsfs__DocuSignAccountConfiguration__c.object
<CustomObject>
    <description>Contains Configuration information for DocuSign</description>
    <fields>
        <fullName>dsfs__AccountId__c</fullName>
        <description>DocuSign AccountID for this Organization</description>
        <label>AccountId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterActionsUndoAndSend__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action Links Undo And Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvCompletedText__c</fullName>
        <label>Envelope Completed Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvCompleted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Envelope Completed Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvDeclinedText__c</fullName>
        <label>Envelope Declined Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvDeclined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Declined Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvDeliveredText__c</fullName>
        <label>Envelope Delivered Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Delivered Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvSentText__c</fullName>
        <label>Envelope Sent Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Sent Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvVoidedText__c</fullName>
        <label>Envelope Voided Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvVoided__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Envelope Voided Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterEnvelopeSigning__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action Links Envelope Signing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipCompletedText__c</fullName>
        <label>Recipient Completed Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Completed Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipDeclinedText__c</fullName>
        <label>Recipient  Declined Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipDeclined__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Recipient Declined Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipDeliveredText__c</fullName>
        <label>Recipient Delivered Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Delivered Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipSentText__c</fullName>
        <inlineHelpText>t</inlineHelpText>
        <label>Recipient Sent Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Sent Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipSignedText__c</fullName>
        <label>Recipient Signed Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterRecipSigned__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Recipient Signed Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__ChatterSetting__c</fullName>
        <label>Chatter Setting</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DefaultExpireNDays__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Default Expire Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__DefaultReminderNDays__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Default Reminder Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__DefaultRepeatReminderNDays__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Default Repeat Reminder Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__DefaultRoleNames__c</fullName>
        <defaultValue>&quot;Signer 1&quot; &amp; BR() &amp;
&quot;Signer 2&quot; &amp; BR() &amp;
&quot;Signer 3&quot; &amp; BR() &amp;
&quot;Signer 4&quot;</defaultValue>
        <description>Recipient role names that correspond with the recipient role values when sending with DocuSign.</description>
        <inlineHelpText>Recipient role names that correspond with the recipient role values when sending with DocuSign.</inlineHelpText>
        <label>DefaultRoleNames</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DefaultRoleValues__c</fullName>
        <defaultValue>&quot;1&quot; &amp; BR() &amp; 
&quot;2&quot; &amp; BR() &amp; 
&quot;3&quot; &amp; BR() &amp; 
&quot;4&quot;</defaultValue>
        <description>Recipient role values that correspond with the recipient role names when sending with DocuSign</description>
        <inlineHelpText>Recipient role values that correspond with the recipient role names when sending with DocuSign</inlineHelpText>
        <label>DefaultRoleValues</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DefaultWarnOfExpireNDays__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Default warn of expiration days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Default_Apex_Timeout__c</fullName>
        <label>Default Apex Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__DisplayInPersonSigningInOwnWindow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this box means that when signing a document with DocuSign, the InPerson signing page will display in its own window, as opposed to being embedded inside Salesforce header/sidebar.</description>
        <inlineHelpText>Set the DocuSign InPerson signing page to display in its own window rather than embedded inside of the Salesforce header and/or sidebar.</inlineHelpText>
        <label>Display InPerson Signing In Own Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DisplayTaggerInOwnWindow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box means that when sending a document through DocuSign, the Tagger will display in its own window, as opposed to being embedded inside Salesforce header/sidebar.</description>
        <inlineHelpText>Set the DocuSign tagger to display in its own window rather than embedded inside of the Salesforce header and/or sidebar.</inlineHelpText>
        <label>Display Tagger In Own Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSignBaseURL__c</fullName>
        <description>The base URL for the DocuSign account.</description>
        <label>DocuSignBaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSignEnvironment__c</fullName>
        <description>The DocuSign environment that api calls will be sent to. Value should be prod for normal use, and can be set to demo or preview for testing purposes, or when running in a sandbox.</description>
        <label>DocuSignEnvironment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>production</fullName>
                    <default>true</default>
                    <label>production</label>
                </value>
                <value>
                    <fullName>demo</fullName>
                </value>
                <value>
                    <fullName>preview</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                </value>
                <value>
                    <fullName>stage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody__c</fullName>
        <defaultValue>&quot;I am sending you this request for your electronic signature, please review and electronically sign by following the link below.&quot;</defaultValue>
        <description>DocuSign Email Body</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_de__c</fullName>
        <description>DocuSign Email Body for German</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_de</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_es__c</fullName>
        <description>DocuSign Email Body for Spanish</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_es</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_fr__c</fullName>
        <description>DocuSign Email Body for French</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_fr</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_it__c</fullName>
        <description>DocuSign Email Body for Italian</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_it</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_ja__c</fullName>
        <description>DocuSign Email Body in Japanese</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_ja</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_ko__c</fullName>
        <description>DocuSign Email Body in Korean</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_ko</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_nl__c</fullName>
        <description>DocuSign Email Body in Dutch</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_nl</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_pt_BR__c</fullName>
        <description>DocuSign Email Body in Portuguese Brazilian</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_pt_BR</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_ru__c</fullName>
        <description>DocuSign Email Body in Russian</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_ru</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailBody_zh_CN__c</fullName>
        <description>DocuSign Email Body in Chinese</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>EmailBody_zh_CN</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject__c</fullName>
        <defaultValue>&quot;Documents for your DocuSign Signature&quot;</defaultValue>
        <description>DocuSign Email Subject</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_de__c</fullName>
        <description>DocuSign Email Subject for German</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_de</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_es__c</fullName>
        <description>DocuSign Email Subject for Spanish</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_es</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_fr__c</fullName>
        <description>DocuSign Email Subject for French</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_fr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_it__c</fullName>
        <description>DocuSign Email Subject for Italian</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_it</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_ja__c</fullName>
        <description>DocuSign Email Subject for Japanese</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_ja</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_ko__c</fullName>
        <description>DocuSign Email Subject for Korean</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_ko</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_nl__c</fullName>
        <description>DocuSign Email Subject for Dutch</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_nl</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_pt_BR__c</fullName>
        <description>DocuSign Email Subject for Portuguese Brazilian</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_pt_BR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_ru__c</fullName>
        <description>DocuSign Email Subject for Russian</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_ru</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EmailSubject_zh_CN__c</fullName>
        <description>DocuSign Email Subject for Chinese</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>EmailSubject_zh_CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__EnableNewMobileTaggingUI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableNewMobileTaggingUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__FetchDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supports large DocuSign envelopes by sending envelopes to DocuSign without document data and allowing DocuSign to fetch document data as needed.</description>
        <inlineHelpText>Supports large DocuSign envelopes by sending envelopes to DocuSign without document data and allowing DocuSign to fetch document data as needed. Turn on only if sending envelopes exceeds Salesforce callout limits.</inlineHelpText>
        <label>Fetch Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__HideChatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideChatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__HideEmailMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideEmailMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__HideEmailSubject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideEmailSubject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__HideRemindExpire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideRemindExpire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__HideSendNowButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideSendNowButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__HideTagButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideTagButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__IncludeDefaultAnchorTabs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IncludeDefaultAnchorTabs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__Lightning_Component_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client side logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__LoadFiles__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add attached Files to envelopes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__LookupUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSignAccountConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__ManageUsersFields__c</fullName>
        <description>A comma separated list of field ids of user information to display in the Manage Users page.</description>
        <label>Manage Users Fields</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__OrganizationId__c</fullName>
        <description>Salesforce OrganizationId</description>
        <label>OrgId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__SetupDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SetupDone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__UpgradeHelper__c</fullName>
        <description>Used to determine if fields have been initialized.</description>
        <label>UpgradeHelper</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__UseAccountNotificationDefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling Reminder and Expiration Settings allows you to specify reminder and expiration defaults in DocuSign for Salesforce. These settings override the default Reminders &amp; Expirations settings from your DocuSign account.</description>
        <inlineHelpText>Enabling Reminder and Expiration Settings allows you to specify reminder and expiration defaults in DocuSign for Salesforce. These settings override the default Reminders &amp; Expirations settings from your DocuSign account.</inlineHelpText>
        <label>Use Account Notification Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__UseSendOnBehalfOf__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Send On Behalf Of</label>
        <type>Checkbox</type>
    </fields>
    <label>DocuSign Account Configuration</label>
    <listViews>
        <fullName>dsfs__All_DS_Configurations</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSX-{00}</displayFormat>
        <label>DocuSign Account Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Account Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>